welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: value =< is not a member of Int
    if (tea >= 2*candy || 2*tea =< candy) {
                                ^